# AIDbg

./: .gitattributes  .gitignore  BUILD_VS2022.md  CMakeLists.txt  GITHUB_ACTIONS_GUIDE.md  README.md
.github/workflows/: build.yml
prompts/: deobfuscate.md  detect_vulnerability.md  explain_instruction.md  generate_patch.md  system_prompt.md
src/: plugin.cpp  plugin.h  pluginmain.cpp  pluginmain.h
src/commands/: AICommands.cpp  AICommands.h
src/core/: ContextCollector.cpp  ContextCollector.h
src/llm/: GLMProvider.cpp  GLMProvider.h  ILLMProvider.h  OllamaProvider.cpp  OllamaProvider.h  OpenAIProvider.cpp  OpenAIProvider.h  ProviderRegistry.cpp  ProviderRegistry.h
src/ui/: SettingsDialog.cpp  SettingsDialog.h
src/utils/: ConfigManager.cpp  ConfigManager.h  HttpClient.cpp  HttpClient.h  Logger.h
